--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,10 +1,48 @@
 .header {
-	background-color: rgb(195, 220, 231);
-	padding: 50px 0;
+  height: 100vh;
+  position: relative;
+  color: white;
+  background-color: azure;
+  &__content {
+    position: absolute;
+    z-index: 10;
+    top: 50px;
+    left: 70px;
+    right: 70;
+    bottom: 80px;
+    width: 1778px;
+    /* remove connection with click */
+    pointer-events: none;
 
-	&__row {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
+    background-color: #9d8f8fad;
+
+    @media (max-width: 1200px) {
+      top: 40px;
+      left: 40px;
+      right: 40px;
+      bottom: 60px;
+    }
+
+    @media (max-width: 767px) {
+      top: 30px;
+      left: 5%;
+      right: 5%;
+      bottom: 30px;
+    }
+  }
+
+  /* &__nav {
+  }
+
+  &__socials {
+  }
+
+  &__see-more {
+  }
+
+  &__slider-controls {
+  }
+
+  &__scrollbar {
+  } */
 }
