--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -2,7 +2,8 @@
   height: 100vh;
   position: relative;
   color: white;
-  background-color: azure;
+  background-image: url('./../img/slider-bg/01.jpg');
+
   &__content {
     position: absolute;
     z-index: 10;
@@ -13,8 +14,6 @@
     width: 1778px;
     /* remove connection with click */
     pointer-events: none;
-
-    background-color: #9d8f8fad;
 
     @media (max-width: 1200px) {
       top: 40px;
@@ -31,18 +30,51 @@
     }
   }
 
-  /* &__nav {
+  &__nav {
+    pointer-events: all;
   }
 
   &__socials {
+    pointer-events: all;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translate(0%, -50%);
+
+    @media (max-width: 767px) {
+      display: none;
+    }
+
+    @media (max-height: 600px) {
+      top: 40%;
+    }
   }
 
   &__see-more {
+    pointer-events: all;
+    position: absolute;
+    left: 0;
+    bottom: 0;
   }
 
   &__slider-controls {
+    pointer-events: all;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+
+    pointer-events: all;
   }
 
   &__scrollbar {
-  } */
+    pointer-events: all;
+    position: absolute;
+    transform: translate(0, 50%);
+    z-index: 9;
+    right: 0;
+    left: auto;
+    width: 10px;
+    height: 400px;
+    background-color: aqua;
+  }
 }
