--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -1,20 +1,23 @@
 :root {
-	--container-width: 1200px;
-	--container-padding: 15px;
+  --container-width: 1200px;
+  --container-padding: 15px;
 
-	--font-main: 'Poppins', sans-serif;
-	--font-accent: 'Playfair Display', serif;
+  --font-main: 'Poppins', sans-serif;
+  --font-accent: 'Playfair Display', serif;
 
-	--page-bg: #fff;
-	--text-color: #000;
-	--accent: #ac182c;
+  --page-bg: #fff;
+  --text-color: #000;
+  --accent: #ac182c;
 
-    --laptop-size: 1199px;
-	--tablet-size: 959px;
-	--mobile-size: 599px;
+  --laptop-size: 1199px;
+  --tablet-size: 959px;
+  --mobile-size: 599px;
+
+  --radial-bg: radial-gradient(50% 50% at 50% 50%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
+  --linear-bg: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, rgba(255, 255, 255, 0) 99.99%, rgba(255, 255, 255, 0) 100%);
 }
 
 .dark {
-    --page-bg: #252526;
-    --text-color: #fff;
+  --page-bg: #252526;
+  --text-color: #fff;
 }
