--- a/src/scss/blocks/slides-controls.scss
+++ b/src/scss/blocks/slides-controls.scss
@@ -13,8 +13,8 @@
   &__controls-count {
     display: flex;
     column-gap: 6px;
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
 
     color: rgba(255, 255, 255, 0.3);
     font-size: 18px;
