--- a/src/scss/blocks/slide.scss
+++ b/src/scss/blocks/slide.scss
@@ -11,7 +11,6 @@
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  background: var(--radial-bg), var(--linear-bg), url('./../img/slider-bg/01.jpg');
 
   cursor: grab;
 
@@ -85,4 +84,25 @@
     flex-direction: column;
     row-gap: 20px;
   }
+}
+
+/* slides styles */
+.slide--norway {
+  background: var(--radial-bg), var(--linear-bg), url('../../img/slider-bg/01.jpg');
+}
+
+.slide--austria {
+  background: var(--radial-bg), var(--linear-bg), url('../../img/slider-bg/02.jpg');
+}
+.slide--austria {
+  background: var(--radial-bg), var(--linear-bg), url('../../img/slider-bg/02.jpg');
+}
+.slide--uae {
+  background: var(--radial-bg), var(--linear-bg), url('../../img/slider-bg/03.jpg');
+}
+.slide--thailand {
+  background: var(--radial-bg), var(--linear-bg), url('../../img/slider-bg/04.jpg');
+}
+.slide--morocco {
+  background: var(--radial-bg), var(--linear-bg), url('../../img/slider-bg/05.jpg');
 }
