add slides and styles for them

--- a/src/scss/blocks/slide.scss
+++ b/src/scss/blocks/slide.scss
@@ -62,10 +62,28 @@
 
   &__title span {
     padding: 0 10px;
-    background: linear-gradient(47.06deg, #000000 -3.87%, rgba(255, 255, 255, 0) 20.89%), #fff;
+  }
 
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  &--norway span {
+    background: linear-gradient(47.06deg, #042a3c -3.87%, rgba(255, 255, 255, 0) 20.89%), #fff;
+    @include backGround;
+    background-repeat: no-repeat;
+  }
+  &--austria span {
+    background: linear-gradient(47.06deg, #334148 -3.87%, rgba(255, 255, 255, 0) 20.89%), #fff;
+    @include backGround;
+  }
+  &--thailand span {
+    background: linear-gradient(47.06deg, #2b757e -3.87%, rgba(255, 255, 255, 0) 20.89%), #fff;
+    @include backGround;
+  }
+  &--uae span {
+    background: linear-gradient(47.06deg, #5a3d2d -3.87%, rgba(255, 255, 255, 0) 20.89%), #fff;
+    @include backGround;
+  }
+  &--marocco span {
+    background: linear-gradient(47.06deg, #aa795b -3.87%, rgba(255, 255, 255, 0) 20.89%), #fff;
+    @include backGround;
   }
 }
 
@@ -90,7 +108,6 @@
 .slide--norway {
   background: var(--radial-bg), var(--linear-bg), url('../../img/slider-bg/01.jpg');
 }
-
 .slide--austria {
   background: var(--radial-bg), var(--linear-bg), url('../../img/slider-bg/02.jpg');
 }
