--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -21,3 +21,7 @@
   --page-bg: #252526;
   --text-color: #fff;
 }
+@mixin backGround {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
