--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,15 +1,15 @@
 .header {
   height: 100vh;
   position: relative;
-  color: white;
+  background-color: #c4c4c4;
+  color: hsl(0, 0%, 100%);
 
   &__content {
-    margin: 0 auto;
     position: absolute;
-    z-index: 10;
+    z-index: 9;
     top: 50px;
     left: 70px;
-    right: 70;
+    right: 70px;
     bottom: 80px;
 
     /* remove connection with click */
@@ -60,7 +60,7 @@
   &__slider-controls {
     pointer-events: all;
     position: absolute;
-    right: -125%;
+    right: 0;
     bottom: 0;
 
     pointer-events: all;
@@ -68,15 +68,14 @@
 
   &__scrollbar {
     pointer-events: all;
+
     position: absolute;
-
-    right: -125%;
+    right: 0px;
     top: 45%;
-    width: 400px;
-    height: 20px;
-    border-radius: 5px;
 
-    transform: rotate(90deg) translate(50%, 0);
+    width: 400px;
+    height: 10px;
+    transform: rotate(90deg) translate(50%, 0%);
     transform-origin: right top;
   }
 }
