--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -55,6 +55,9 @@
     position: absolute;
     left: 0;
     bottom: 0;
+    @media (max-width: 1023px) {
+      display: none;
+    }
   }
 
   &__slider-controls {
@@ -62,8 +65,9 @@
     position: absolute;
     right: 0;
     bottom: 0;
-
-    pointer-events: all;
+    @media (max-width: 1023px) {
+      display: none;
+    }
   }
 
   &__scrollbar {
@@ -77,5 +81,17 @@
     height: 10px;
     transform: rotate(90deg) translate(50%, 0%);
     transform-origin: right top;
+    @media (min-width: 768px) and (max-height: 700px) {
+      width: 300px;
+    }
+
+    @media (max-width: 767px) {
+      transform: none;
+      top: unset;
+      bottom: -15px;
+      left: 0;
+      right: unset;
+      width: 100%;
+    }
   }
 }
