--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -24,4 +24,8 @@
 @mixin backGround {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  background-color: rgb(203, 204, 206);
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
