--- a/src/scss/blocks/_nav.scss
+++ b/src/scss/blocks/_nav.scss
@@ -29,7 +29,7 @@
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: rgb(154, 29, 29);
+  background-color: #0d7a81;
   bottom: -4px;
   left: 0;
   transform-origin: right;
